--- a/script/index.ejs
+++ b/script/index.ejs
@@ -46,7 +46,7 @@ Flickr.prototype.<%= ns %>.<%= basename(method) %> = function (args) {
 	<%_ getRequiredArguments(method).forEach(function (arg) { _%>
 	assert(args, '<%= arg %>');
 	<%_ }); _%>
-	return this._('GET', '<%= method %>', args);
+	return this._('<%= getHTTPVerb(method) %>', '<%= method %>', args);
 };
 <%_ }); _%>
 <% }); %>
