--- a/script/test.ejs
+++ b/script/test.ejs
@@ -18,7 +18,7 @@ describe('<%= method %>', function () {
 	it('returns a Request instance', function () {
 		var req = <%= method %>(<%- toObject(args) %>);
 
-		assert.equal(req.method, 'GET');
+		assert.equal(req.method, '<%= verb %>');
 		assert.equal(req.url, 'https://api.flickr.com/services/rest');
 	});
 
