Added new namespace 'other' allow passthrough for future/undocumented endpoints Added test for changes to rest service for this Update build and test directions in README Ignoring the console lint warning in the reflect script Add nvmrc file and engine property to package.json to document node version (picked v4.4.4 for now)
Don't create a whole namespace for the passthrough

Fix spacing

--- a/script/rest.ejs
+++ b/script/rest.ejs
@@ -17,6 +17,8 @@ function Flickr(auth) {
 	<%_ namespaces.forEach(function (ns) { _%>
 	this.<%= ns %>._ =
 	<%_ }); _%>
+	// create passthrough for future/undocumented endpoints
+	this._ =
 	createClient(auth);
 }
 
@@ -40,6 +42,7 @@ Flickr.prototype.<%= ns %>.<%= basename(method) %> = function (args) {
 };
 <%_ }); _%>
 <% }); %>
+
 /**
  * @exports
  */
