Move request and validate helpers into lib/

--- a/script/rest.ejs
+++ b/script/rest.ejs
@@ -1,5 +1,5 @@
-var createClient = require('../request');
-var validate = require('../validate');
+var createClient = require('../lib/request');
+var validate = require('../lib/validate');
 
 /**
  * @constructor
