Subclass superagent Request so we can add our own functionality

--- a/script/rest.ejs
+++ b/script/rest.ejs
@@ -1,4 +1,4 @@
-var request = require('superagent');
+var request = require('../lib/request');
 var validate = require('../lib/validate');
 var json = require('../plugins/json');
 
