--- a/script/rest.ejs
+++ b/script/rest.ejs
@@ -1,3 +1,8 @@
+/**
+ * Copyright 2017 Yahoo Holdings.
+ * Licensed under the terms of the MIT license. Please see LICENSE file in the project root for terms.
+ */
+
 var request = require('../lib/request');
 var validate = require('../lib/validate');
 var json = require('../plugins/json');
