--- a/script/rest.ejs
+++ b/script/rest.ejs
@@ -59,11 +59,6 @@ function createClient(auth, opts) {
  * add your API key to the request params. For methods that require
  * authentication, use the [OAuth plugin]{@link Flickr.OAuth.createPlugin}.
  *
- * All of the [REST API][services/api] methods are available on the
- * Flickr prototype. Each method accepts a single parameter which
- * is an optional hash of arguments. Refer to the [REST API][services/api]
- * docs for the full list of methods and their supported arguments.
- *
  * @constructor
  * @param {Function} auth An authentication plugin function
  *
@@ -109,6 +104,21 @@ function createClient(auth, opts) {
  * }).catch(function (err) {
  *   console.error('bonk', err);
  * });
+ *
+ * @classdesc
+ *
+ * All of the [REST API][services/api] methods are available on the
+ * [Flickr]{@link Flickr} prototype. Each method accepts a single parameter
+ * which is an optional hash of arguments. Refer to the [REST API][services/api]
+ * docs for the full list of methods and their supported arguments.
+ *
+ * | Method | Permissions | Required Arguments |
+ * | --- | --- | --- |
+<%_ namespaces.forEach(function (ns) { _%>
+<% getMethodsByNamespace(ns).forEach(function (method) { %>
+ * | [<%= method %>](<%= getDocsURL(method) %>) | <%= getPerms(method) %> | <%= getRequiredArguments(method).map(s => '`' + s + '`').join(', ') %> |
+<%_ }); _%>
+<%_ }); _%>
  */
 
 function Flickr(auth, opts) {
@@ -139,7 +149,7 @@ Flickr.prototype.<%= ns %> = {};
  * @param {Object} [args]
  * @returns {Request}
  * @ignore
- * @see https://www.flickr.com/services/api/<%= method %>.html
+ * @see <%= getDocsURL(method) %>
  */
 
 Flickr.prototype.<%= ns %>.<%= basename(method) %> = function (args) {
