Fix search example and docs

--- a/script/build-rest.ejs
+++ b/script/build-rest.ejs
@@ -96,7 +96,7 @@ function createClient(auth, opts) {
  * var flickr = new Flickr(process.env.FLICKR_API_KEY);
  *
  * flickr.photos.search({
- *   photo_id: 25825763 // sorry, @dokas
+ *   text: 'doggo'
  * }).then(function (res) {
  *   console.log('yay!', res.body);
  * }).catch(function (err) {
