--- a/script/build-docs.ejs
+++ b/script/build-docs.ejs
@@ -2,13 +2,13 @@
 
 <%= package.description %>
 
-## install
+## Install
 
 ```
 $ npm install <%= package.name %>
 ```
 
-## usage
+## Usage
 
 <%= package.name %> is based on [superagent][] and all methods that make API calls will return a superagent Request instance configured for the request. This means that you can do anything with Flickr requests that you can do with superagent.
 
@@ -27,7 +27,7 @@ var Flickr = require('<%= package.name %>');
 ```
 <%- docs %>
 
-## license
+## License
 
 Code licensed under the MIT license. See LICENSE file for terms.
 
