--- a/script/build-rest.ejs
+++ b/script/build-rest.ejs
@@ -22,6 +22,28 @@ function createAPIKeyPlugin(str) {
 }
 
 /**
+ * Dedupes an array, set, or string of extras and returns
+ * a comma separated version of it
+ * @param {String|Array|Set} extras
+ * @returns {Function}
+ * @private
+ */
+
+function processExtras(extras) {
+	if (typeof extras === 'string') {
+		extras = extras.split(',');
+	}
+
+	if (Array.isArray(extras)) {
+		extras = new Set(extras);
+	}
+
+	if (extras instanceof Set) {
+		return Array.from(extras).join(',');
+	}
+}
+
+/**
  * Creates a new Flickr API client. This "client" is a factory
  * method that creates a new superagent request pre-configured
  * for talking to the Flickr API. You must pass an "auth"
@@ -53,13 +75,8 @@ function createClient(auth, opts) {
 			args = {};
 		}
 
-		// the API expects the "extras" param to be a
-		// comma-separated list, so if we are given an
-		// array we should join it
-		if (Array.isArray(args.extras)) {
-			args.extras = args.extras.join(',');
-		} else if (args.extras instanceof Set) {
-			args.extras = Array.from(args.extras).join(',');
+		if (args.extras) {
+			args.extras = processExtras(args.extras);
 		}
 
 		return request(verb, 'https://' + host + '/services/rest')
