don't default to 443 when no port is explicitly provided
this breaks existing tests (and behaviors)

only add a port to the request uri when explicitly provided

--- a/script/build-rest.ejs
+++ b/script/build-rest.ejs
@@ -63,7 +63,7 @@ function processExtras(extras) {
  */
 
 function createClient(auth, opts) {
-	var host, port;
+	var host;
 
 	// allow passing just an api key instead of a function
 	if (typeof auth === 'string') {
@@ -77,7 +77,10 @@ function createClient(auth, opts) {
 	// options
 	opts = opts || {};
 	host = opts.host || 'api.flickr.com';
-	port = opts.port || '443';
+
+	if (opts.port) {
+		host += ':' + opts.port;
+	}
 
 	return function (verb, method, args) {
 		if (typeof args === 'undefined') {
@@ -88,7 +91,7 @@ function createClient(auth, opts) {
 			args.extras = processExtras(args.extras);
 		}
 
-		return request(verb, 'https://' + host + ':' + port + '/services/rest')
+		return request(verb, 'https://' + host + '/services/rest')
 			.query({ method: method })
 			.query(args)
 			.use(json)
